--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "sass": "^1.61.0"
   }
 }
