--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"]
+  "extends": [
+    "next/core-web-vitals",
+    "prettier"
+  ],
+  "rules": {
+    "no-trailing-spaces": 2,
+    "indent": [
+      "error",
+      2
+    ],
+    "no-multiple-empty-lines": "error",
+    "no-multi-spaces": "error"
+  }
 }
