--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,11 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "cookies-next": "^2.1.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "i18next": "^22.4.14",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
     "next-i18next": "^13.2.2",
     "react": "18.2.0",
